src/native/libs/Evergreen.Physics/egJolt.h

typedef struct {
	void* internal;
} EgJoltInstance;
typedef struct {
	float x;
	float y;
	float z;
} EgJoltVector3;
typedef struct {
	float x;
	float y;
	float z;
	float w;
} EgJoltVector4;
typedef struct {
	float x;
	float y;
	float z;
	float w;
} EgJoltQuaternion;
typedef struct {
	EgJoltVector4 m0;
	EgJoltVector4 m1;
	EgJoltVector4 m2;
	EgJoltVector4 m3;
} EgJoltMatrix4x4;
typedef struct {
	float maxSlopeAngle;
	float maxStrength;
	float padding;
	float penetrationRecoverySpeed;
	float predictiveContactDistance;
	float standingHeight;
	float standingRadius;
	float crouchingHeight;
	float crouchingRadius;
	float mass;
} EgJoltCharacterSettings;
typedef struct {
	void* internal;
} EgJoltCharacterVirtual;
typedef struct {
	void* internal;
} EgJoltCharacter;
typedef struct {
	unsigned int bodyId1;
	unsigned long long userData1;
	EgJoltVector3 point1;
	unsigned int bodyId2;
	unsigned long long userData2;
	EgJoltVector3 point2;
} EgJoltContactArgs;
typedef struct {
	EgJoltVector3 position;
	EgJoltQuaternion rotation;
	EgJoltVector3 linearVelocity;
	EgJoltVector3 angularVelocity;
	float gravityFactor;
	EgJolt_BodyFlags flags;
} EgJoltBodyState;
typedef struct
{
	EgJoltVector3			stickToFloorStepDown;
	EgJoltVector3			walkStairsStepUp;
	float					walkStairsMinStepForward;
	float					walkStairsStepForwardTest;
	float					walkStairsCosAngleForwardContact;
	EgJoltVector3			walkStairsStepDownExtra;
} EgJoltCharacterVirtualUpdateSettings;
enum class EgJolt_GroundState
{
	OnGround,						///< Character is on the ground and can move freely.
	OnSteepGround,					///< Character is on a slope that is too steep and can't climb up any further. The caller should start applying downward velocity if sliding from the slope is desired.
	NotSupported,					///< Character is touching an object, but is not supported by it and should fall. The GetGroundXXX functions will return information about the touched object.
	InAir							///< Character is in the air and is not touching anything.
};
	EG_EXPORT EgJoltInstance egJoltCreateInstance(void(*callbackContactAdded)(EgJoltContactArgs), void(*callbackContactPersisted)(EgJoltContactArgs));
	EG_EXPORT void egJoltGetBodyCenterOfMassPositionAndRotation(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3& position, EgJoltQuaternion& rotation);
	EG_EXPORT void egJoltGetBodyVelocity(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3& linearVelocity, EgJoltVector3& angularVelocity);
	EG_EXPORT void egJoltGetBodyCenterOfMassPositionAndRotationAndVelocity(EgJoltInstance instance, unsigned int bodyId, EgJoltVector3& position, EgJoltQuaternion& rotation, EgJoltVector3& linearVelocity, EgJoltVector3& angularVelocity);
	EG_EXPORT EgJoltCharacterVirtual egJoltCreateCharacterVirtual(EgJoltInstance instance, EgJoltCharacterSettings& settings, EgJoltVector3 position);
	EG_EXPORT void egJoltDestroyCharacterVirtual(EgJoltInstance instance, EgJoltCharacterVirtual character);
	EG_EXPORT void egJoltGetCharacterVirtualWorldTransform(EgJoltInstance instance, EgJoltCharacterVirtual character, EgJoltMatrix4x4& transform);
	EG_EXPORT EgJoltVector3 egJoltGetCharacterVirtualCenterOfMassPosition(EgJoltInstance instance, EgJoltCharacterVirtual character);
	EG_EXPORT EgJoltVector3 egJoltGetCharacterVirtualPosition(EgJoltInstance instance, EgJoltCharacterVirtual character);
	EG_EXPORT void egJolt_CharacterVirtual_SetPosition(EgJoltInstance instance, EgJoltCharacterVirtual character, EgJoltVector3 position);
	EG_EXPORT void egJolt_CharacterVirtual_RefreshContacts(EgJoltInstance instance, EgJoltCharacterVirtual character);
	EG_EXPORT EgJoltVector3 egJoltGetCharacterVirtualLinearVelocity(EgJoltInstance instance, EgJoltCharacterVirtual character);
	EG_EXPORT void egJoltSetCharacterVirtualLinearVelocity(EgJoltInstance instance, EgJoltCharacterVirtual character, EgJoltVector3 linearVelocity);
	EG_EXPORT EgJoltVector3 egJoltGetCharacterVirtualGroundVelocity(EgJoltInstance instance, EgJoltCharacterVirtual character);
	EG_EXPORT EgJolt_GroundState egJolt_CharacterVirtual_GetGroundState(EgJoltInstance instance, EgJoltCharacterVirtual character);
	EG_EXPORT bool egJoltIsCharacterVirtualOnSlopeTooSteep(EgJoltInstance instance, EgJoltCharacterVirtual character);
	EG_EXPORT void egJolt_CharacterVirtual_SetRotation(EgJoltInstance instance, EgJoltCharacterVirtual character, EgJoltQuaternion rotation);
	EG_EXPORT void egJolt_CharacterVirtual_SetUp(EgJoltInstance instance, EgJoltCharacterVirtual character, EgJoltVector3 up);
	EG_EXPORT void egJoltUpdateCharacterVirtualGroundVelocity(EgJoltInstance instance, EgJoltCharacterVirtual character);
	EG_EXPORT void egJoltUpdateCharacterVirtual(EgJoltInstance instance, EgJoltCharacterVirtual character, float deltaTime, EgJoltCharacterVirtualUpdateSettings& updateSettings);
	EG_EXPORT void egJoltGetCharacterVirtualActiveDynamicContacts(EgJoltInstance instance, EgJoltCharacterVirtual character, void(*callbackContact)(unsigned int));
	EG_EXPORT EgJoltCharacter egJoltCreateCharacter(EgJoltInstance instance, EgJoltCharacterSettings& settings, EgJoltVector3 position, unsigned long long userData);
	EG_EXPORT void egJoltDestroyCharacter(EgJoltInstance instance, EgJoltCharacter character);
	EG_EXPORT void egJoltGetCharacterWorldTransform(EgJoltInstance instance, EgJoltCharacter character, EgJoltMatrix4x4& transform);
	EG_EXPORT EgJoltVector3 egJoltGetCharacterCenterOfMassPosition(EgJoltInstance instance, EgJoltCharacter character);
	EG_EXPORT EgJoltVector3 egJoltGetCharacterPosition(EgJoltInstance instance, EgJoltCharacter character);
	EG_EXPORT void egJoltSetCharacterPosition(EgJoltInstance instance, EgJoltCharacter character, EgJoltVector3 position);
	EG_EXPORT EgJoltVector3 egJoltGetCharacterLinearVelocity(EgJoltInstance instance, EgJoltCharacter character);
	EG_EXPORT void egJoltSetCharacterLinearVelocity(EgJoltInstance instance, EgJoltCharacter character, EgJoltVector3 linearVelocity);
	EG_EXPORT EgJoltVector3 egJoltGetCharacterGroundVelocity(EgJoltInstance instance, EgJoltCharacter character);
	EG_EXPORT bool egJoltIsCharacterOnGround(EgJoltInstance instance, EgJoltCharacter character);
	EG_EXPORT void egJoltPostUpdateCharacter(EgJoltInstance instance, EgJoltCharacter character, float maxSeparationDistance);
	EG_EXPORT void egJolt_Body_GetState(const EgJoltInstance instance, const unsigned int bodyId, EgJoltBodyState* state);
	EG_EXPORT void egJolt_Body_SetState(const EgJoltInstance instance, unsigned int bodyId, const EgJoltBodyState* state);
	EG_EXPORT int egJolt_Vector3_IsNearZero(EgJoltVector3 v);
	EG_EXPORT EgJoltQuaternion egJolt_Quaternion_Normalize(EgJoltQuaternion q);
	EG_EXPORT int egJolt_Quaternion_IsNormalized(EgJoltQuaternion q);