src/managed/Physics/Backend/Jolt/Interop/api/Methods.cs


    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltGetBodyCenterOfMassPositionAndRotation(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3 &")] System.Numerics.Vector3* position, [NativeTypeName("EgJoltQuaternion &")] System.Numerics.Quaternion* rotation);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltGetBodyVelocity(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3 &")] System.Numerics.Vector3* linearVelocity, [NativeTypeName("EgJoltVector3 &")] System.Numerics.Vector3* angularVelocity);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltGetBodyCenterOfMassPositionAndRotationAndVelocity(EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("EgJoltVector3 &")] System.Numerics.Vector3* position, [NativeTypeName("EgJoltQuaternion &")] System.Numerics.Quaternion* rotation, [NativeTypeName("EgJoltVector3 &")] System.Numerics.Vector3* linearVelocity, [NativeTypeName("EgJoltVector3 &")] System.Numerics.Vector3* angularVelocity);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern EgJoltCharacterVirtual egJoltCreateCharacterVirtual(EgJoltInstance instance, [NativeTypeName("EgJoltCharacterSettings &")] EgJoltCharacterSettings* settings, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 position);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltDestroyCharacterVirtual(EgJoltInstance instance, EgJoltCharacterVirtual character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltGetCharacterVirtualWorldTransform(EgJoltInstance instance, EgJoltCharacterVirtual character, [NativeTypeName("EgJoltMatrix4x4 &")] System.Numerics.Matrix4x4* transform);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgJoltVector3")]
    public static extern System.Numerics.Vector3 egJoltGetCharacterVirtualCenterOfMassPosition(EgJoltInstance instance, EgJoltCharacterVirtual character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgJoltVector3")]
    public static extern System.Numerics.Vector3 egJoltGetCharacterVirtualPosition(EgJoltInstance instance, EgJoltCharacterVirtual character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJolt_CharacterVirtual_SetPosition(EgJoltInstance instance, EgJoltCharacterVirtual character, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 position);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJolt_CharacterVirtual_RefreshContacts(EgJoltInstance instance, EgJoltCharacterVirtual character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgJoltVector3")]
    public static extern System.Numerics.Vector3 egJoltGetCharacterVirtualLinearVelocity(EgJoltInstance instance, EgJoltCharacterVirtual character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSetCharacterVirtualLinearVelocity(EgJoltInstance instance, EgJoltCharacterVirtual character, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 linearVelocity);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgJoltVector3")]
    public static extern System.Numerics.Vector3 egJoltGetCharacterVirtualGroundVelocity(EgJoltInstance instance, EgJoltCharacterVirtual character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern EgJolt_GroundState egJolt_CharacterVirtual_GetGroundState(EgJoltInstance instance, EgJoltCharacterVirtual character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("bool")]
    public static extern byte egJoltIsCharacterVirtualOnSlopeTooSteep(EgJoltInstance instance, EgJoltCharacterVirtual character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJolt_CharacterVirtual_SetRotation(EgJoltInstance instance, EgJoltCharacterVirtual character, [NativeTypeName("EgJoltQuaternion")] System.Numerics.Quaternion rotation);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJolt_CharacterVirtual_SetUp(EgJoltInstance instance, EgJoltCharacterVirtual character, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 up);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltUpdateCharacterVirtualGroundVelocity(EgJoltInstance instance, EgJoltCharacterVirtual character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltUpdateCharacterVirtual(EgJoltInstance instance, EgJoltCharacterVirtual character, float deltaTime, [NativeTypeName("EgJoltCharacterVirtualUpdateSettings &")] EgJoltCharacterVirtualUpdateSettings* updateSettings);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltGetCharacterVirtualActiveDynamicContacts(EgJoltInstance instance, EgJoltCharacterVirtual character, [NativeTypeName("void (*)(unsigned int)")] delegate* unmanaged[Cdecl]<uint, void> callbackContact);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern EgJoltCharacter egJoltCreateCharacter(EgJoltInstance instance, [NativeTypeName("EgJoltCharacterSettings &")] EgJoltCharacterSettings* settings, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 position, [NativeTypeName("unsigned long long")] ulong userData);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltDestroyCharacter(EgJoltInstance instance, EgJoltCharacter character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltGetCharacterWorldTransform(EgJoltInstance instance, EgJoltCharacter character, [NativeTypeName("EgJoltMatrix4x4 &")] System.Numerics.Matrix4x4* transform);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgJoltVector3")]
    public static extern System.Numerics.Vector3 egJoltGetCharacterCenterOfMassPosition(EgJoltInstance instance, EgJoltCharacter character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgJoltVector3")]
    public static extern System.Numerics.Vector3 egJoltGetCharacterPosition(EgJoltInstance instance, EgJoltCharacter character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSetCharacterPosition(EgJoltInstance instance, EgJoltCharacter character, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 position);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgJoltVector3")]
    public static extern System.Numerics.Vector3 egJoltGetCharacterLinearVelocity(EgJoltInstance instance, EgJoltCharacter character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltSetCharacterLinearVelocity(EgJoltInstance instance, EgJoltCharacter character, [NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 linearVelocity);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgJoltVector3")]
    public static extern System.Numerics.Vector3 egJoltGetCharacterGroundVelocity(EgJoltInstance instance, EgJoltCharacter character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("bool")]
    public static extern byte egJoltIsCharacterOnGround(EgJoltInstance instance, EgJoltCharacter character);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJoltPostUpdateCharacter(EgJoltInstance instance, EgJoltCharacter character, float maxSeparationDistance);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJolt_Body_GetState([NativeTypeName("const EgJoltInstance")] EgJoltInstance instance, [NativeTypeName("const unsigned int")] uint bodyId, EgJoltBodyState* state);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egJolt_Body_SetState([NativeTypeName("const EgJoltInstance")] EgJoltInstance instance, [NativeTypeName("unsigned int")] uint bodyId, [NativeTypeName("const EgJoltBodyState *")] EgJoltBodyState* state);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern int egJolt_Vector3_IsNearZero([NativeTypeName("EgJoltVector3")] System.Numerics.Vector3 v);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgJoltQuaternion")]
    public static extern System.Numerics.Quaternion egJolt_Quaternion_Normalize([NativeTypeName("EgJoltQuaternion")] System.Numerics.Quaternion q);

    [DllImport("Evergreen.Physics.Backend.Jolt.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern int egJolt_Quaternion_IsNormalized([NativeTypeName("EgJoltQuaternion")] System.Numerics.Quaternion q);
}
